# hypermail

./: .gitignore  COPYING  Changelog  FILES  INSTALL  KNOWN_BUGS  LICENSES.txt  Makefile.in  README  README.CVS  README.git  README.md  RELATED_LICENSES.txt  RELEASE_NOTES  ROADMAP  TODO  UPGRADE  acconfig.h  aclocal.m4  aol.com  autogen.sh  config.h.in  config.sub  configure  configure.ac  configure.in  maketgz  patchlevel.h
.github/workflows/c-cpp.yml/: 🏠Nate158
.github/เวิร์กโฟลว์/main.yml/: nate15872.wordpress.com
archive/: .indent.pro  1998  Makefile.in  README  lists.h  mbox2hypermail.c  msg2archive.c  runtest  test-msg
configs/: hmrc.example  hypermail-footer.hyp  hypermail-index.hyp  hypermail-msg.hyp  hypermail.rc
contrib/: canonicalize.pl  cron_hypermail  css_to_c.pl  fixhtime.pl  hyp-msgid-scrapper.pl  hyparchive-msgid-scrapper.pl  hyperfeed.pl  hypetombox.pl  ls2mail  msg2hypermailarchive.py  runtest
contrib/hoaf-28/: README  collect_snipplets.py  create_archive_snipplet.py  haof-0.1.dtd  hypermail-2b28-2b28+.patch
contrib/mailbox_date_trimmer/: README.html  README.mailbox_reader  mailbox_date_trimmer.py  mailbox_reader.py
docs/: Install-win32.txt  Makefile.in  archive_search.html  attachments.txt  credits.html  customizing.html  faq.html  hmrc.4  hmrc.html  hypermail-doc.css  hypermail-faq.html  hypermail.1  hypermail.css  hypermail.html  index_hypermail.txt  thanks.html
lcc/: README.txt  config.h  dirent.c  dirent.h  getdate.c  hypermail.prj  hypermail_files.txt  lcc_extras.c  lcc_extras.h  pcre.h
libcgi/: .indent.pro  Makefile.in  cgi.h  form_ent.c  form_tags.c  get_cgi_info.c  html.c  libcgi.html  main.c  mcode.c  strops.c  syn_mime.c  syn_url.c  template.c
src/: .indent.pro  .splintrc  Makefile.in  base64.c  base64.h  date.c  defaults.h.in  dmatch.c  dmatch.h  domains.c  domains.h  file.c  finelink.c  finelink.h  getdate.h  getdate.texi  getdate.y  getname.c  getname.h  hypermail.c  hypermail.h  lang.c  lang.h  lock.c  mail.c  mail.h  mem.c  mprintf.c  mprintf.h  parse.c  parse.h  print.c  print.h  printcss.c  printfile.c  printfile.h  proto.h  quotes.c  search.c  search.h  (+17 more)
src/fnv/: Makefile.in  README  aclocal.m4  config.in  configure  configure.in  configure.scan  fnv.h  fnv32.c  fnv64.c  hash_32.c  hash_64.c  have_ulong64.c
src/pcre/: Makefile.in  aclocal.m4  configure  configure.in  internal.h  pcre.c  pcre.in
src/pcre/doc/: pcre.3  pcre_compile.3  pcre_exec.3  pcreapi.3  pcrecallout.3  pcretest.1  pcretest.txt
src/pcre/doc/html/: pcre.html  pcre_compile.html  pcre_exec.html  pcreapi.html  pcrecallout.html  pcretest.html
src/pcre/testdata/: testinput5  testoutput1  testoutput2  testoutput3  testoutput4  testoutput5
src/trio/: CHANGES  FILES  Makefile  Makefile.in  README.hypermail  config.status  configure  configure.in  hypermail-patches.diff  regression.c  strio.h  trio.c  trio.h  triodef.h  trionan.c  trionan.h  triop.h  triostr.c  triostr.h
tests/: README  diff_hypermail_archives.pl  msgid-parsing.mbox  stdintest.pl  test-footer.hyp  test-index.hyp  test-msg.hyp  test.rc  testhm.in
tests/mboxes/: 1msg.mbox  critmail.mbox  embedded.msg  t1  t2  t3  t4  t5  t6  t7  t8  y2k.mbox
